// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie list component should contain 1 movie 1`] = `
<div
  className="form-row"
>
  <ul
    className="col-12 list-group"
  >
    <li
      className="list-group-item"
      onClick={[Function]}
    >
      <strong>
        Minions: Puppy
      </strong>
      <img
        alt="Minions: Puppy"
        className="rounded img-thumbnail float-right"
        src="https://image.mock.api/small/maBSw4YgUzjQoowiMI51FG0Npzc.jpg"
      />
      
    </li>
  </ul>
</div>
`;

exports[`Movie list component should contain 4 movies 1`] = `
<div
  className="form-row"
>
  <ul
    className="col-12 list-group"
  >
    <li
      className="list-group-item"
      onClick={[Function]}
    >
      <strong>
        Minions
      </strong>
      <img
        alt="Minions"
        className="rounded img-thumbnail float-right"
        src="https://image.mock.api/small/q0R4crx2SehcEEQEkYObktdeFy.jpg"
      />
      
    </li>
    <li
      className="list-group-item"
      onClick={[Function]}
    >
      <strong>
        Minions: Competition
      </strong>
      <img
        alt="Minions: Competition"
        className="rounded img-thumbnail float-right"
        src="https://image.mock.api/small/d7wrcnERHpa6fA3rhvTllIitGRm.jpg"
      />
      
    </li>
    <li
      className="list-group-item"
      onClick={[Function]}
    >
      <strong>
        Mower Minions
      </strong>
      <img
        alt="Mower Minions"
        className="rounded img-thumbnail float-right"
        src="https://image.mock.api/small/Ao9clrCn3Ct4a92amHWzfnOCLCh.jpg"
      />
      
    </li>
    <li
      className="list-group-item"
      onClick={[Function]}
    >
      <strong>
        Minions: Puppy
      </strong>
      <img
        alt="Minions: Puppy"
        className="rounded img-thumbnail float-right"
        src="https://image.mock.api/small/maBSw4YgUzjQoowiMI51FG0Npzc.jpg"
      />
      
    </li>
  </ul>
</div>
`;
